# sbc_rest_client

./: MANIFEST.in  README.md  pyproject.toml
src/sbc_rest_client/: __init__.py  sbc.py
